--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=tqf
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=tqf
+DB_PASSWORD=tqf1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
